Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.7
-
967997d93 (dev)
Description
An image from QQuickImageProvider is unaffected by sourceClipRect property. Each time the sourceClipRect property is modified a new image is requested but there is no visual change.
Steps to reproduce the problem:
- Run the attached project
- Click anywhere on the screen to increase the size of sourceClipRect (=>nothing changes)
Attachments
Issue Links
- relates to
-
QTBUG-96203 QML SVG, PDF & QQuickImageProvider rendering ignores Screen.devicePixelRatio
-
- Closed
-
-
QTBUG-86316 Image sourceClipRect ignored for textures, "image:" urls
-
- Reported
-
-
QTBUG-124216 Make QQuickImageProviderOptions accessible in public API
-
- Reported
-
For Gerrit Dashboard: QTBUG-98958 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
440141,3 | Pass the sourceClipRect setting in the QQuickImageProvider options | dev | qt/qtdeclarative | Status: MERGED | +2 | +1 |