Pass the sourceClipRect setting in the QQuickImageProvider options

This provides access to that property to image providers that
implement the QQuickImageProviderWithOptions API.

Fixes: QTBUG-98958
Task-number: QTBUG-86316
Change-Id: I0356e6205ab699e01a7c634ddf4d964e0c0228aa
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>